-------------------------------------------------------------------------------
Changes in version 1.09

-------------------------------------------------------------------------------
Changes in version 1.08

- Fixed yet another one-off bug in listed filenames that resulted in the
  leading character being chopped off when CWD is "/".

- Previous versions of twoftpd would drop all dotfiles from listings.
  This version makes that behavior optional, as well as also disallowing
  all file access to dotfiles when they are hidden.

- Modified how emulated or "soft" chroot mode is enabled.  Previously it
  was enabled by setting the first character of $CHROOT to "e".  Now it
  is enabled by setting $SOFTCHROOT and not setting $CHROOT.

- Added a "lock HOME" backend setting that works similar to the soft
  chroot above.  The CWD will still include $HOME, but all accesses to
  files and paths outside of $HOME will be forbidden.

- Added support for the SITE CHMOD command in the twoftpd-xfer backend,
  as well as a framework for adding other SITE commands.

- Added code to show the true mode of files in long listings rather than
  just "-rw-r--r--" for files and "drwxr-xr-x" for directories.

- Long listings now also show the true group name reported by the CVM
  when the group number on the file is the same as $GID.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.07

- Fixed a bug in handling listing unreadable directory entries that
  would cause listings to be prematurely terminated immediately before
  such an entry.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.06
